<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item1"
        android:title="@string/item1" />
    <item
        android:id="@+id/item2"
        android:title="@string/item2" />
    <item
        android:id="@+id/item3"
        android:title="@string/item3" />
    <item
        android:id="@+id/item4"
        android:title="@string/item4" />
    <item
        android:id="@+id/item5"
        android:title="@string/item5" />
    <item
        android:id="@+id/item6"
        android:title="@string/item6" />
    <item
        android:id="@+id/item7"
        android:title="@string/item7" />
    <item
        android:id="@+id/item8"
        android:title="@string/item8" />

    <item
        android:id="@+id/item9"
        android:title="@string/item9" />

</menu>