<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register_img"
        tools:context=".Register">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="414dp"
            android:layout_height="237dp"
            android:layout_marginTop="88dp"
            android:contentDescription="@string/register_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/register_logo" />

        <TextView
            android:id="@+id/textView2"
            style="@style/register_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView3"
            style="@style/register_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tendangnhap"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            style="@style/register_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/matkhau"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            style="@style/register_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/xacnhanmatkhau"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp" />

        <EditText
            android:id="@+id/edit_email"
            android:inputType="textEmailAddress"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_tendangnhap"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/Tuoi"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/edit_tuoi"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/Tuoi"
            app:layout_constraintTop_toTopOf="@+id/Tuoi"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/edit_matkhau"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:hint="@string/pass_cond"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#B5ADAD"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_xacnhanmatkhau"
            style="@style/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/pass_cond"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#B5ADAD"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            tools:ignore="LabelFor" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="385dp" />

        <TextView
            android:id="@+id/Tuoi"
            style="@style/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="@string/tuoi"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/return_btn"
            android:layout_width="51dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/return_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_dangky"
            style="@style/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_button_green"
            android:bottomLeftRadius="10dp"
            android:bottomRightRadius="10dp"
            android:text="@string/dangky"
            android:textColor="@color/white"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/edit_xacnhanmatkhau" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>