<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/favorite_img"
    tools:context=".pro_an">

    <Button
        android:id="@+id/return_btn2"
        android:layout_width="60dp"
        android:layout_height="50dp"

        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="332dp"
        android:background="@drawable/return_button"
        android:theme="@style/normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="126dp"
        android:layout_height="127dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="145dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/return_btn2"
        app:srcCompat="@drawable/profile_button" />

    <Button
        android:id="@+id/btn_dangnhap"
        style="@style/button_style"
        android:layout_marginStart="85dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="84dp"
        android:hint="@string/dangnhap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_dangky"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_marginStart="85dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="84dp"
        android:hint="@string/dangky"
        android:theme="@style/button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dangnhap"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="604dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:translationY="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>