<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/option_img"
        tools:context=".login">

        <TextView
            android:id="@+id/filmName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/copyright"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/return_btn_dn"
            android:layout_width="51dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/return_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_dn"
            style="@style/btn_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/round_button_green"
            android:bottomLeftRadius="10dp"

            android:bottomRightRadius="10dp"
            android:text="@string/dangnhap"
            android:textColor="@color/white"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/filmName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_matkhau_dn" />

        <EditText
            android:id="@+id/edit_matkhau_dn"
            style="@style/edit_text"
            android:layout_width="243dp"
            android:layout_height="50dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="71dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_matkhau_dn"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_tendangnhap"
            style="@style/edit_text"
            android:layout_width="243dp"
            android:layout_height="50dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="71dp"
            android:layout_marginBottom="19dp"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/text_matkhau_dn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_dangnhap"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/option_logo" />

        <TextView
            android:id="@+id/text_dangnhap"
            style="@style/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginTop="33dp"

            android:layout_marginEnd="189dp"
            android:text="@string/tendangnhap"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/text_matkhau_dn"
            style="@style/register_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="97dp"
            android:layout_marginTop="17dp"

            android:layout_marginEnd="236dp"
            android:text="@string/matkhau"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_tendangnhap" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>