<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/favorite_img"
    tools:context=".ChatBox">

    <Button
        android:id="@+id/home_search2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/home_button"
        android:theme="@style/normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/return_btn3"
        android:layout_width="51dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/return_button"
        android:theme="@style/normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- A horizontal line between the chatbox and RecyclerView -->

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="0dp"
        android:background="#dfdfdf"
        app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/layout_chatbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button_green"
        android:backgroundTint="#2F3E46"
        android:minHeight="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/button_chatbox_send"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_img"
        app:layout_constraintTop_toTopOf="@+id/guideline11">

        <EditText
            android:id="@+id/edittext_chatbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/comment"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="6"
            android:textColor="@color/light_yellow"
            android:textColorHint="#FFFFFF"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/button_chatbox_send"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/send_img"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:theme="@style/normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="607dp" />

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@drawable/profile_button"
        android:contentDescription="@string/user_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <TextView
        android:id="@+id/numOfCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/num_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>